fixed spacing on youtube videos

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@
   display: flex;
   justify-content: center; 
   margin:0 auto;
-  height: 700px;
+  height: 500px;
 }
 .sizzle {
     margin-top: 100px;
@@ -181,7 +181,7 @@
 
 
   .reel-container {
-    height: 700px;
+    height: 500px;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
